test/resources/typer/failing/ExtTupleError4.scala
object TupleError {
  def f(a: (Int, String)): Unit = {
    Std.printString(a(0) ++ a(1))
  }

  f((1, " hello!"))
}